--- a/nginx.conf
+++ b/nginx.conf
@@ -9,6 +9,7 @@ server {
         try_files $uri /index.html;
     }
 
+    # Proxy all /api/ requests to the backend service on port 8000
     location /api/ {
         proxy_pass http://backend:8000/;
         proxy_http_version 1.1;
