--- a/nginx.conf
+++ b/nginx.conf
@@ -9,9 +9,10 @@ server {
         try_files $uri /index.html;
     }
 
-    # Proxy all /api/ requests to the backend service on port 8000
+    # Proxy all /api/ requests to the backend service on port 8000, stripping /api
     location /api/ {
-        proxy_pass http://backend:8000/;
+        rewrite ^/api(/.*)$ $1 break;
+        proxy_pass http://backend:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
