--- a/nginx.conf
+++ b/nginx.conf
@@ -9,10 +9,28 @@ server {
         try_files $uri /index.html;
     }
 
-    # Proxy all /api/ requests to the backend service on port 8000, stripping /api
+    # Proxy /login and /register to the backend
+    location /login {
+        proxy_pass http://backend:8000/login;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    location /register {
+        proxy_pass http://backend:8000/register;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # (Optional) Proxy all /api/ requests to the backend for future use
     location /api/ {
-        rewrite ^/api(/.*)$ $1 break;
-        proxy_pass http://backend:8000;
+        proxy_pass http://backend:8000/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
