--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - db
     networks:
       - app-network
+  
   frontend:
     image: front:1.0
     container_name: react-frontend
@@ -36,10 +37,34 @@ services:
       - "5432:5432"
     networks:
       - app-network
+  db1:
+    image: postgres:15
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: yourpassword
+      POSTGRES_DB: mydatabase
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+  app:
+    image: go:1.0
+    depends_on:
+      - db1
+    ports:
+      - "8080:8080"
+    environment:
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASSWORD: yourpassword
+      DB_NAME: mydatabase
+
 
 volumes:
   pgdata:
-
+  postgres_data:
 networks:
   app-network:
     driver: bridge
