--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,7 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
     location /back/ {
-        proxy_pass http://app:8080/back/;
+        proxy_pass http://app:8080/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
