--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,78 +1,106 @@
-version: "3.9"
+# version: "3.9"
+
+# services:
+#   backend:
+#     image: user:1.0
+#     container_name: fastapi-backend
+#     ports:
+#       - "8000:8000"
+#     environment:
+#       DATABASE_URL: postgresql://postgres:postgres@db:5432/mydb
+#     depends_on:
+#       - db
+#     networks:
+#       - app-network
+
+#   frontend:
+#     image: front:1.0
+#     container_name: react-frontend
+#     ports:
+#       - "80:80"
+#     depends_on:
+#       - backend
+#     networks:
+#       - app-network
+
+#   db:
+#     image: postgres:14
+#     container_name: postgres-db
+#     restart: always
+#     environment:
+#       POSTGRES_USER: postgres
+#       POSTGRES_PASSWORD: postgres
+#       POSTGRES_DB: mydb
+#     volumes:
+#       - pgdata:/var/lib/postgresql/data
+#     ports:
+#       - "5432:5432"  # ✅ Keep this if you want to connect from outside Docker
+#     networks:
+#       - app-network
+
+#   # db1:
+#   #   image: postgres:15
+#   #   container_name: frontend2-db1-1
+#   #   restart: always
+#   #   environment:
+#   #     POSTGRES_USER: postgres
+#   #     POSTGRES_PASSWORD: yourpassword
+#   #     POSTGRES_DB: mydatabase
+#   #   ports:
+#   #     - "5433:5432"  # ✅ Changed host port to avoid conflict
+#   #   volumes:
+#   #     - postgres_data:/var/lib/postgresql/data
+#   #   networks:
+#   #     - app-network
+
+#   # app:
+#   #   image: go:1.0
+#   #   container_name: frontend2-app-1
+#   #   depends_on:
+#   #     - db1
+#   #   ports:
+#   #     - "8080:8080"
+#   #   environment:
+#   #     DB_HOST: db1  # ✅ Connect to db1 by service name
+#   #     DB_PORT: 5432
+#   #     DB_USER: postgres
+#   #     DB_PASSWORD: yourpassword
+#   #     DB_NAME: mydatabase
+#   #   networks:
+#   #     - app-network
+
+# volumes:
+#   pgdata:
+#   # postgres_data:
+
+# networks:
+#   app-network:
+#     driver: bridge
+
+
+
+
+
+version: '3.8'
 
 services:
-  backend:
-    image: user:1.0
-    container_name: fastapi-backend
-    ports:
-      - "8000:8000"
-    environment:
-      DATABASE_URL: postgresql://postgres:postgres@db:5432/mydb
-    depends_on:
-      - db
-    networks:
-      - app-network
-
-  frontend:
-    image: front:1.0
-    container_name: react-frontend
-    ports:
-      - "80:80"
-    depends_on:
-      - backend
-    networks:
-      - app-network
-
   db:
-    image: postgres:14
-    container_name: postgres-db
+    image: postgres:15
     restart: always
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: mydb
-    volumes:
-      - pgdata:/var/lib/postgresql/data
+      POSTGRES_PASSWORD: yourpassword
+      POSTGRES_DB: mydatabase
     ports:
-      - "5432:5432"  # ✅ Keep this if you want to connect from outside Docker
-    networks:
-      - app-network
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
-  # db1:
-  #   image: postgres:15
-  #   container_name: frontend2-db1-1
-  #   restart: always
-  #   environment:
-  #     POSTGRES_USER: postgres
-  #     POSTGRES_PASSWORD: yourpassword
-  #     POSTGRES_DB: mydatabase
-  #   ports:
-  #     - "5433:5432"  # ✅ Changed host port to avoid conflict
-  #   volumes:
-  #     - postgres_data:/var/lib/postgresql/data
-  #   networks:
-  #     - app-network
-
-  # app:
-  #   image: go:1.0
-  #   container_name: frontend2-app-1
-  #   depends_on:
-  #     - db1
-  #   ports:
-  #     - "8080:8080"
-  #   environment:
-  #     DB_HOST: db1  # ✅ Connect to db1 by service name
-  #     DB_PORT: 5432
-  #     DB_USER: postgres
-  #     DB_PASSWORD: yourpassword
-  #     DB_NAME: mydatabase
-  #   networks:
-  #     - app-network
-
+  app:
+    build: .
+    depends_on:
+      - db
+    ports:
+      - "8080:8080"
 volumes:
-  pgdata:
-  # postgres_data:
-
-networks:
-  app-network:
-    driver: bridge
+  postgres_data:
