--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,8 +79,6 @@
 
 
 
-
-
 version: '3.8'
 
 services:
@@ -102,5 +100,15 @@ services:
       - db
     ports:
       - "8080:8080"
+    environment:
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASSWORD: yourpassword
+      DB_NAME: mydatabase
+
 volumes:
   postgres_data:
+
+
+
