--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,42 +1,59 @@
-# version: "3.9"
+version: "3.9"
 
-# services:
-#   backend:
-#     image: user:1.0
-#     container_name: fastapi-backend
-#     ports:
-#       - "8000:8000"
-#     environment:
-#       DATABASE_URL: postgresql://postgres:postgres@db:5432/mydb
-#     depends_on:
-#       - db
-#     networks:
-#       - app-network
+services:
+  backend:
+    image: user:1.0
+    container_name: fastapi-backend
+    ports:
+      - "8000:8000"
+    environment:
+      DATABASE_URL: postgresql://postgres:postgres@db:5432/mydb
+    depends_on:
+      - db
+    networks:
+      - app-network
 
-#   frontend:
-#     image: front:1.0
-#     container_name: react-frontend
-#     ports:
-#       - "80:80"
-#     depends_on:
-#       - backend
-#     networks:
-#       - app-network
+  frontend:
+    image: front:1.0
+    container_name: react-frontend
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
+      - cart
+    networks:
+      - app-network
 
-#   db:
-#     image: postgres:14
-#     container_name: postgres-db
-#     restart: always
-#     environment:
-#       POSTGRES_USER: postgres
-#       POSTGRES_PASSWORD: postgres
-#       POSTGRES_DB: mydb
-#     volumes:
-#       - pgdata:/var/lib/postgresql/data
-#     ports:
-#       - "5432:5432"  # ✅ Keep this if you want to connect from outside Docker
-#     networks:
-#       - app-network
+  cart:
+    image: cart:1.0 # Adjust this to the path where Dockerfile and src/ exist
+    container_name: cart-backend
+    ports:
+      - "5000:5000"
+    networks:
+      - app-network
+
+  db:
+    image: postgres:14
+    container_name: postgres-db
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: mydb
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    networks:
+      - app-network
+
+volumes:
+  pgdata:
+
+networks:
+  app-network:
+    driver: bridge
+
 
 #   # db1:
 #   #   image: postgres:15
@@ -79,36 +96,36 @@
 
 
 
-version: '3.8'
+# version: '3.8'
 
-services:
-  db:
-    image: postgres:15
-    restart: always
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: yourpassword
-      POSTGRES_DB: mydatabase
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+# services:
+#   db:
+#     image: postgres:15
+#     restart: always
+#     environment:
+#       POSTGRES_USER: postgres
+#       POSTGRES_PASSWORD: yourpassword
+#       POSTGRES_DB: mydatabase
+#     ports:
+#       - "5432:5432"
+#     volumes:
+#       - postgres_data:/var/lib/postgresql/data
 
-  app:
-    image: go:1.0
-    depends_on:
-      - db
-    ports:
-      - "8080:8080"
-    environment:
-      DB_HOST: db
-      DB_PORT: 5432
-      DB_USER: postgres
-      DB_PASSWORD: yourpassword
-      DB_NAME: mydatabase
+#   app:
+#     image: go:1.0
+#     depends_on:
+#       - db
+#     ports:
+#       - "8080:8080"
+#     environment:
+#       DB_HOST: db
+#       DB_PORT: 5432
+#       DB_USER: postgres
+#       DB_PASSWORD: yourpassword
+#       DB_NAME: mydatabase
 
-volumes:
-  postgres_data:
+# volumes:
+#   postgres_data:
 
 
 
