--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,16 @@ server {
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
     }
-    
+    location /cart/ {
+        proxy_pass http://cart:5000/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+
+    }
+
     # location /back/ {
     #     proxy_pass http://app:8080/;
     #     proxy_http_version 1.1;
