--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
     depends_on:
       - backend
       - cart
+      - order
     networks:
       - app-network
 
@@ -31,6 +32,16 @@ services:
       - "5000:5000"
     networks:
       - app-network
+
+  order:
+    image: order:1.0      # Folder containing Dockerfile and pom.xml
+    container_name: order-service
+    ports:
+      - "8080:8080"
+    networks:
+      - app-network
+    depends_on:
+      - db
 
   db:
     image: postgres:14
