--- a/nginx.conf
+++ b/nginx.conf
@@ -27,15 +27,15 @@ server {
         proxy_cache_bypass $http_upgrade;
 
     }
-    location /order/ {
-        proxy_pass http://order:8080/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+    # location /order/ {
+    #     proxy_pass http://order:8080/;
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Upgrade $http_upgrade;
+    #     proxy_set_header Connection 'upgrade';
+    #     proxy_set_header Host $host;
+    #     proxy_cache_bypass $http_upgrade;
 
-    }
+    # }
 
     # location /back/ {
     #     proxy_pass http://app:8080/;
