--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - backend
       - cart
       - order
+      - payment
     networks:
       - app-network
 
@@ -32,6 +33,15 @@ services:
       - "5000:5000"
     networks:
       - app-network
+
+  payment:
+    image: payment:1.0 # Adjust this to the path where Dockerfile and src/ exist
+    container_name: payment-backend
+    ports:
+      - "8081:8080"
+    networks:
+      - app-network
+
 
   order:
     image: order:1.0      # Folder containing Dockerfile and pom.xml
