--- a/nginx.conf
+++ b/nginx.conf
@@ -36,6 +36,15 @@ server {
         proxy_cache_bypass $http_upgrade;
 
     }
+    location /payment/ {
+        proxy_pass http://payment:8081/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+
+    }
 
     # location /back/ {
     #     proxy_pass http://app:8080/;
