--- a/nginx.conf
+++ b/nginx.conf
@@ -36,7 +36,7 @@ server {
         proxy_cache_bypass $http_upgrade;
 
     }
-    location /payment/ {
+    location /pay/ {
         proxy_pass http://payment:8081/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
