--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,20 @@
-name: CI/CD Pipeline (Main branch with Manual Approval)
-
 on:
   push:
     branches:
-      - main    # Only main branch
+      - '**'    # All branches
+  pull_request:
+    branches:
+      - '**'
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Build app
-        run: echo "Building app on branch ${{ github.ref_name }}..."
-
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Run tests
-        run: echo "Running tests on branch ${{ github.ref_name }}..."
-
   deploy:
     runs-on: ubuntu-latest
-    needs: test
+    if: github.ref_name == 'main'   # 👈 Only deploy if main branch!
     environment:
-      name: production  # 👈 Environment with manual approval required
+      name: production  # 👈 Triggers manual approval
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Deploy step
-        run: echo "Deploying branch ${{ github.ref_name }} to Production..."
+        run: echo "Deploying main branch to Production..."
