--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,21 +1,47 @@
-# Node.js with React
-# Build a Node.js project that uses React.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
-
+# azure-pipelines.yml
 trigger:
-- main
+  branches:
+    include:
+      - main
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: 'ubuntu-latest'
 
-steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '20.x'
-  displayName: 'Install Node.js'
+stages:
+- stage: ExampleStage
+  displayName: 'Pipeline Stage'
+  jobs:
+    - job: ExampleJob
+      displayName: 'Pipeline Job'
+      steps:
 
-- script: |
-    npm install
-    npm run build
-  displayName: 'npm install and build'
+        # Step 1 - Checkout code
+        - checkout: self
+
+        # Step 2 - Run script
+        - script: echo "Hello from Azure Pipeline!"
+          displayName: 'Print Hello'
+
+        # Step 3 - Run multi-line script
+        - script: |
+            echo "First line"
+            echo "Second line"
+            echo "Third line"
+          displayName: 'Print multiple lines'
+
+        # Step 4 - Use a built-in task (Node.js install)
+        - task: UseNode@1
+          displayName: 'Use Node.js version 16'
+          inputs:
+            version: '16.x'
+
+        # Step 5 - Another script using Node
+        - script: node --version
+          displayName: 'Show Node.js version'
+
+        # Step 6 - Publish artifact
+        - task: PublishBuildArtifacts@1
+          displayName: 'Publish build artifacts'
+          inputs:
+            pathToPublish: '$(Build.ArtifactStagingDirectory)'
+            artifactName: 'drop'
