--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,4 @@
-sonar.projectKey=python-backend
-
+sonar.projectKey=frontend
 # # Project name (display name in SonarQube UI)
 # sonar.projectName=My Company - Project Name
 
