--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,10 @@ services:
       - "8000:8000"
     environment:
       DATABASE_URL: postgresql://postgres:postgres@db:5432/mydb
-      REDIS_URL: redis://redis:6379/0  # Add this if your backend uses REDIS_URL env
+      REDIS_URL: redis://redis:6379/0
     depends_on:
       - db
-      - redis  # Add redis dependency
+      - redis
     networks:
       - app-network
 
@@ -32,13 +32,10 @@ services:
       - "80:80"
     depends_on:
       - backend
-<<<<<<< HEAD
       - go-backend
-=======
       - cart
       - order
       - payment
->>>>>>> main
     networks:
       - app-network
 
@@ -84,7 +81,7 @@ services:
       - app-network
 
   redis:
-    image: redis:7.2 # You can pick latest redis version or stable
+    image: redis:7.2
     container_name: redis-cache
     restart: always
     ports:
@@ -98,6 +95,7 @@ volumes:
 networks:
   app-network:
     driver: bridge
+
 
 
 #   # db1:
