--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^3.3.1",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "react-select": "^5.7.3"
   },
   "scripts": {
     "start": "react-scripts start --openssl-legacy-provider",
