--- a/nginx.conf
+++ b/nginx.conf
@@ -46,13 +46,13 @@ server {
 
     }
 
-    # location /back/ {
-    #     proxy_pass http://app:8080/;
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Upgrade $http_upgrade;
-    #     proxy_set_header Connection 'upgrade';
-    #     proxy_set_header Host $host;
-    #     proxy_cache_bypass $http_upgrade;
-    # }
+    location /product/ {
+        proxy_pass http://product:8080/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
 
 }
