--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -128,8 +128,7 @@ services:
     ports:
       - "8082:8082"
     depends_on:
-      mysql:
-        condition: service_healthy # Already correctly set to wait for healthy MySQL
+      - mysql # Already correctly set to wait for healthy MySQL
     environment:
       DB_HOST: mysql
       DB_PORT: 3306
