--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-scripts": "^5.0.1",
     "web-vitals": "^3.3.1",
     "react-router-dom": "^6.23.0",
-    "react-select": "^5.7.3"
+    "react-select": "^5.7.3",
+    "react-dropzone": "^14.2.3"
   },
   "scripts": {
     "start": "react-scripts start --openssl-legacy-provider",
