--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,7 +63,8 @@ services:
     ports:
       - "8082:8082"
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
     environment:
       DB_HOST: mysql
       DB_PORT: 3306
