--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,8 +53,10 @@ services:
     container_name: order-service
     ports:
       - "8080:8080"
+    environment:
+      DATABASE_URL: postgresql://postgres:postgres@db1:5432/mydb
     depends_on:
-      - db
+      - db1
     networks:
       - app-network
 
