--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,7 +54,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      DATABASE_URL: postgresql://postgres:postgres@db1:5432/mydb
+      - DATABASE_URL=postgresql://postgres:postgres@db1:5432/mydb
     depends_on:
       - db1
     networks:
