--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "web-vitals": "^3.3.1",
     "react-router-dom": "^6.23.0",
     "react-select": "^5.7.3",
-    "react-dropzone": "^14.2.3"
+    "react-dropzone": "^14.2.3",
+    "lucide-react": "^0.400.0"
   },
   "scripts": {
     "start": "react-scripts start --openssl-legacy-provider",
