--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -32,7 +32,7 @@ sonar.login=sqa_1b2cbc50055ad56584e075c6ca93fb5c289cbeef
 # sonar.exclusions=**/*.test.*,**/test/**,**/__tests__/**
 
 # # Only analyze specific files or foldersgg
-# # sonar.inclusions=src/main/java/**/*.java
+# # sonar.inclusions=src/main/java/**/*.java1
 
 # # Exclude generated code, third-party libraries, etc.
 # sonar.excludedSources=build/**,node_modules/**,dist/**
