--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^6.23.0",
     "react-select": "^5.7.3",
     "react-dropzone": "^14.2.3",
-    "lucide-react": "^0.400.0"
+    "lucide-react": "^0.400.0",
+    "eslint": "^9.0.0"
   },
   "scripts": {
     "start": "react-scripts start --openssl-legacy-provider",
