--- a/config.json
+++ b/config.json
@@ -3,16 +3,17 @@
     "serviceName": "frontend",
     "notificationRecipients": "mohan14242@gmail.com",
     "docker_username": "dockeruser123",
-    "docker_credentials": "docker-credentials-id",
+    "docker_credentials": "docker-id",
     "docker_registry": "docker.io/ammohan6212",
     "kubernetes_endpoint": "https://34.121.208.218",
-    "bucket_name": "example-artifact-bucket",
+    "bucket_name": "micro-service",
     "bucket_path": "artifacts/builds/example-service",
     "kubernetesClusterName": "example-cluster",
     "kubernetesCredentialsId": "k8s-credentials-id",
     "kubernetesCaCertificate": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0t...==",
     "gcp_credid": "gcp-credentials-id",
     "aws_credid": "aws-credentials-id",
-    "service_port":"8080"
+    "service_port":"8080",
+    "project_name":"microservice"
 }
 
