--- a/package.json
+++ b/package.json
@@ -9,20 +9,12 @@
     "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
+    "web-vitals": "^3.3.1",
+    "react-router-dom": "^6.23.0",
     "react-select": "^5.7.3",
     "react-dropzone": "^14.2.3",
-    "lucide-react": "^0.400.0",
-    "web-vitals": "^3.3.1"
-  },
-  "devDependencies": {
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "lucide-react": "^0.400.0"
   },
   "scripts": {
     "start": "react-scripts start --openssl-legacy-provider",
