--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "github_repo": "https://github.com/ammohan6212/front-service.git",
-    "serviceName": "frontend",
+    "serviceName": "front",
     "notificationRecipients": "mohan14242@gmail.com",
     "docker_username": "mohan14242ai",
     "docker_cred_username":"docker-username",
