--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.3",
-    "web-vitals": "^3.3.1",
-    "eslint":"^9.0.0"
+    "web-vitals": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start --openssl-legacy-provider",
