--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.23.0",
-    "react-scripts": "0.0.0",
+    "react-scripts": "^0.0.0",
     "react-select": "^5.7.3",
     "web-vitals": "^3.3.1"
   },
