--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "start": "react-scripts start --openssl-legacy-provider",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint 'src/**/*.{js,jsx}'",
-    "lint:fix": "eslint 'src/**/*.{js,jsx}' --fix"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
