--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react-dropzone": "^14.2.3",
     "lucide-react": "^0.400.0"
   },
+  "devDependencies": { // Add this section if it doesn't exist
+    "typescript": "^4.9.5" // Add this line
+  },
   "scripts": {
     "start": "react-scripts start --openssl-legacy-provider",
     "build": "react-scripts build",
