--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "react-dropzone": "^14.2.3",
     "lucide-react": "^0.400.0"
   },
-  "devDependencies": { // Add this section if it doesn't exist
-    "typescript": "^4.9.5" // Add this line
+  "devDependencies": { 
+    "typescript": "^4.9.5" 
   },
   "scripts": {
     "start": "react-scripts start --openssl-legacy-provider",
