--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lucide-react": "^0.400.0"
   },
   "devDependencies": { 
-    "typescript": "^4.9.5" 
+    "typescript": "^4.9.5",
+    "eslint-config-react-app": "^7.0.1"
   },
   "scripts": {
     "start": "react-scripts start --openssl-legacy-provider",
