--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "eslint-config-react-app": "^7.0.1"
   },
   "scripts": {
+    "lint": "eslint 'src/**/*.{js,jsx}'",
+    "lint:fix": "eslint 'src/**/*.{js,jsx}' --fix",
     "start": "react-scripts start --openssl-legacy-provider",
     "build": "react-scripts build",
     "test": "react-scripts test",
