--- a/config.json
+++ b/config.json
@@ -13,6 +13,6 @@
     "gcp_credid": "gcp-credentials-id",
     "aws_credid": "aws-credentials-id",
     "image_registry":"https://index.docker.io/v1/",
-    "services": [{"name": "payment", "port": 8081, "expectedCode": "200", "path": "/health"}]
+    "services": [{"name": "front", "port": 8081, "expectedCode": "200", "path": "/health"}]
 }
 
