--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -84,11 +84,17 @@ jobs:
         with:
           sarif_file: trivy-sbom-results.sarif
     
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/node@master
+      - name: Set up Snyk CLI
+        uses: snyk/actions/setup@806182742461562b67788a64410098c9d9b96adb
         env:
           SNYK_TOKEN: d9141a36-1bc7-49bb-b541-bc2a1c31b3bf
-        continue-on-error: true
+
+      - name: Authenticate Snyk
+        run: snyk auth d9141a36-1bc7-49bb-b541-bc2a1c31b3bf
+
+      - name: scanning the dependencies
+        run: snyk test --file=package-lock.json
+    
 
     
   lint:
@@ -153,3 +159,22 @@ jobs:
       - name: Secret Scanner
         uses: secret-scanner/action@0.0.2
         continue-on-error: true
+
+  unit-tests:
+    name: Run Unit Tests
+    runs-on: ubuntu-latest
+    needs: install-dependencies
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Node.js dependencies (if not already cached/present)
+        # This is a good practice if unit-tests run in a fresh runner or parallel to install-dependencies
+        run: npm ci
+
+      - name: Run Unit Tests
+        # Assuming 'npm test' is defined in package.json
+        run: npm test
+      
+      - name: code coverage report 
+        run: echo "code coverage happens here"
