--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -64,7 +64,7 @@ jobs:
 
 
       - name: install the dependencies here
-        run: npm ci
+        run: npm install
       
       - name: Scan with Trivy SBOM
         uses: aquasecurity/trivy-action@master
@@ -159,22 +159,3 @@ jobs:
       - name: Secret Scanner
         uses: secret-scanner/action@0.0.2
         continue-on-error: true
-
-  unit-tests:
-    name: Run Unit Tests
-    runs-on: ubuntu-latest
-    needs: install-dependencies
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install Node.js dependencies (if not already cached/present)
-        # This is a good practice if unit-tests run in a fresh runner or parallel to install-dependencies
-        run: npm ci
-
-      - name: Run Unit Tests
-        # Assuming 'npm test' is defined in package.json
-        run: npm test
-      
-      - name: code coverage report 
-        run: echo "code coverage happens here"
