--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - dev
       - test
+permissions:
+  contents: read
+  security-events: write
+
 
 jobs:
   clone-tag-and-config:
@@ -87,7 +91,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
+
       - name: Run application linter
         # Assuming 'npm run lint' is defined in package.json
         run: npm run lint
@@ -115,31 +119,3 @@ jobs:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         continue-on-error: true 
-
-  secret-detect:
-    name: Secret Detection
-    runs-on: ubuntu-latest
-    needs: install-dependencies
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0 # Required for Gitleaks/TruffleHog to scan full history
-
-      - name: Run TruffleHog
-        # Using a dedicated action is generally better for caching and maintenance
-        uses: trufflesecurity/trufflehog-action@main # Or a specific version like v1.0.0
-        with:
-          path: ./
-          base: ${{ github.sha }} # Scan only changes from the current commit
-          extra_args: --only-verified
-        continue-on-error: true 
-
-      - name: Run Gitleaks
-        uses: gitleaks/gitleaks-action@v2
-        with:
-          args: "--verbose --redact"
-
-      - name: Secret Scanner
-        uses: secret-scanner/action@0.0.2
-        continue-on-error: true
