--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -133,6 +133,19 @@ jobs:
         with:
           fetch-depth: 0 # Required for Gitleaks/TruffleHog to scan full history
 
+      - name: Setup Python for detect-secrets
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install detect-secrets
+        run: pip install detect-secrets
+
+      - name: Run detect-secrets
+        run: |
+          detect-secrets scan > .secrets.new.baseline
+          detect-secrets diff .secrets.baseline .secrets.new.baseline
+          
       - name: Run TruffleHog
         # Using a dedicated action is generally better for caching and maintenance
         uses: edplato/trufflehog-actions-scan@master  # Or a specific version like v1.0.0
